# PicoGameCubeMacroTool

./: .gitignore  GCMacroTool Shell WIP.stl  README.md
app/: Macro_Tool.py
builds/: PicoGameCubeMacroTool.uf2
firmware/: CMakeLists.txt
firmware/licenses/: LICENSE-MIT-pico-crossing.txt  LICENSE-MIT-retro-pico-switch.txt
firmware/src/: ble.cpp  ble.hpp  btstack_config.h  device.cpp  display.cpp  main.cpp  script.cpp  script.hpp  shiny_tool.gatt  simulatedController.cpp  simulatedController.hpp  types.hpp
tools/: bin2uf2.py  ble_test.py
